--- a/src/com/exchange/statistics/UserInterface.form
+++ b/src/com/exchange/statistics/UserInterface.form
@@ -213,47 +213,21 @@
         <properties>
           <autoscrolls value="false"/>
           <maximumSize width="500" height="2147483647"/>
+          <preferredSize width="1002" height="120"/>
         </properties>
-        <border type="none" title="Raw Data"/>
+        <border type="none" title=""/>
         <children>
-          <grid id="a75c5" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="10" bottom="10" right="10"/>
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="f3465" class="javax.swing.JButton" binding="convertCSVButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Convert CSV"/>
-                </properties>
-              </component>
-              <component id="5c2c8" class="javax.swing.JButton" binding="convertJSONButton" default-binding="true">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Convert JSON"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
           <grid id="3838" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="10" right="0"/>
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <maximumSize width="2000" height="2147483647"/>
-              <preferredSize width="500" height="80"/>
+              <preferredSize width="500" height="100"/>
             </properties>
-            <border type="none"/>
+            <border type="none" title="Raw Data"/>
             <children>
               <scrollpane id="f5f81">
                 <constraints>
@@ -272,32 +246,17 @@
               </scrollpane>
             </children>
           </grid>
-          <grid id="d0345" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="10" right="0"/>
+          <grid id="d0345" binding="statisticsContainer" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <maximumSize width="20000" height="20000"/>
-              <preferredSize width="500" height="80"/>
+              <preferredSize width="500" height="100"/>
             </properties>
-            <border type="none"/>
-            <children>
-              <scrollpane id="680b9">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="80b83" class="javax.swing.JTextArea" binding="convertedArea">
-                    <constraints/>
-                    <properties/>
-                  </component>
-                </children>
-              </scrollpane>
-            </children>
+            <border type="none" title="Statistics"/>
+            <children/>
           </grid>
         </children>
       </grid>
